# dftbp-extmodel

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.rst
api/: externalmodel.h
doc/: Doxyfile  MODEL.md
include/: externalmodel.h
src/: externalmodel.c
